// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColumnDimensionsField snapshots > should render the field with its label and value 1`] = `
<DocumentFragment>
  <div
    class="_TextField_bd2800"
  >
    <div
      class="_TextFieldWrapper_9a3a67 _TextFieldWrapper--filled_9a3a67"
      data-test-text-field="width"
    >
      <div
        class="ScrubbableInput"
      >
        <span
          class="_ColumnDimensionsField__label_bca1a8"
        >
          W
        </span>
      </div>
      <input
        aria-label="Width"
        class="_TextFieldWrapper__input_9a3a67"
        data-test-bypass-global-shortcuts="true"
        data-test-text-field-input="width"
        type="number"
        value="326"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnDimensionsField snapshots > should render the sizing-mode chevron when a sizing mode is given 1`] = `
<DocumentFragment>
  <div
    class="_TextField_bd2800"
  >
    <div
      class="_TextFieldWrapper_9a3a67 _TextFieldWrapper--filled_9a3a67"
      data-test-text-field="width"
    >
      <div
        class="ScrubbableInput"
      >
        <span
          class="_ColumnDimensionsField__label_bca1a8"
        >
          W
        </span>
      </div>
      <input
        aria-label="Width"
        class="_TextFieldWrapper__input_9a3a67"
        data-test-bypass-global-shortcuts="true"
        data-test-text-field-input="width"
        type="number"
        value="326"
      />
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Width sizing options"
        class="_ButtonMenu_7516ba"
        data-state="closed"
        type="button"
      >
        <svg
          class="Icon"
          data-fpl-icon-size="16"
          fill="none"
          height="10"
          style="color: var(--color-neutral-1);"
          viewBox="0 0 16 16"
          width="10"
        >
          <path
            d="M9.768 6.768a.5.5 0 0 1 .707.707l-2.12 2.121a.5.5 0 0 1-.708 0L5.525 7.475a.5.5 0 0 1 .708-.707l1.768 1.767z"
            data-svg-property="fill"
            fill="white"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
